[UPDATE] Added localization files and selection of such files